# PGsolver

./: .gitignore  CMakeLists.txt  readme.md
doc/: main.tex  reference.bib
src/: CMakeLists.txt  Elements.cpp  Elements.h  PGSolver.cpp  PGSolver.h  Parser.cpp  Parser.h  Stamping.cpp  Stamping.h  Verification.cpp  main.cpp
src/solver/: CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  EigenSolver.cpp  EigenSolver.h  GaussSolver.cpp  GaussSolver.h  JacobiSolver.cpp  JacobiSolver.h  SORSolver.cpp  SORSolver.h  Solver.h  SolverFactory.cpp  SolverFactory.h  utils.cpp  utils.h
